fix: improve spacing between sync-row elements

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -19,11 +19,10 @@ section > * {
     width: 300px;
 }
 
-form {
-    display: flex;
-    align-self: center;
+.sync > input[type="number"] {
+    width: 50px;
 }
 
-form > input[type="number"] {
-    width: 50px;
+.sync button {
+    margin-left: 20px;
 }
